updating my details and introduction about me!

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student at KU Coding bootcamp studying Coding and Web Development. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Leavenworth, KS</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are playing video games and doing research to further my knowledge as a Coder and Web Developer.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To make my own video game, and to become one of the best Coders / Web Developers of my generation.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Leavenworth, Kansas.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Because as Technology grows you can work for any Company anywhere in the World, Also I would like to see my imagination come to life in a way where I can show everyone online what I'm seeing in my Subconscious and Conscious Mind and bring it to Reality.</p>
     </section>
 
     <footer id="footer">
